using System;

namespace Scripts_Generated.ChatGPT_40.Monobehaviours.Pinball.Entry_3
{
    using UnityEngine;

    public class KirbyTriplet : MonoBehaviour
    {
        private int state = 0; // 0 = asleep, 1 = awake, 2 = fully down

        public void PassOver()
        {
            state++;
            if (state == 1)
            {
                DebugUI.Log("Kirby Triplet woke up!");
            }
            else if (state == 2)
            {
                DebugUI.Log("Kirby Triplet fully down!");
                // Check if all other triplets are down and remove drain stoppers
            }

            // Update visual representation of the Kirby triplet here
        }

        private void OnTriggerEnter(Collider other)
        {
            PassOver();
        }
    }

}